# quantum-conway

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  old-main.rs
src/gpu/: buffers.rs  compute.rs  context.rs  mod.rs  render.rs
src/shaders/: compute.wgsl  render.wgsl
src/simulation/: cell.rs  grid.rs  mod.rs
