[package]
name = "quantum-conway"
version = "0.2.0"
edition = "2021"

[dependencies]
# GPU compute and rendering
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.19", features = ["derive"] }

# Random number generation (CPU-side initialization)
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true